2007-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/base.py (OneLineMixin.make_line): stringify
	our got_revision before checking its length: SVN (at least) still
	reports numeric values for this.
	* buildbot/status/web/build.py (StatusResourceBuild.body): same
	* buildbot/status/web/xmlrpc.py
	(XMLRPCServer.xmlrpc_getAllBuildsInInterval): same, also stop
	serving a completely fake revision

	* buildbot/scripts/runner.py (Maker.check_master_cfg): prepend
	basedir to sys.path, to mimic what a real buildmaster would have
	access to, since it is common for master.cfg to import helper
	classes from .py files in the buildmaster directory, and we want
	config-file checking to accomodate this.

	* buildbot/status/web/base.py (map_branches): when referring to
	branches through WebStatus (i.e. by appending ?branch=FOO query
	arguments to the URL), make "trunk" mean trunk, by mapping it to
	None before passing it to generateFinishedBuilds() and the like.
	* buildbot/status/web/baseweb.py (OneLinePerBuild.body): same
	(OneBoxPerBuilder.body): same, also improve display of branches in
	the HTML a bit
	* buildbot/status/web/waterfall.py (BuildTopBox.getBox): same
	(WaterfallStatusResource.buildGrid): same. Note that this filters
	Changes as well as Builds.
	* docs/buildbot.texinfo (Buildbot Web Resources): remove the
	caveat about trunk branches, now that it's fixed

	* buildbot/status/web/base.py (OneLineMixin): refactor, move this
	from builder.py, use it on the Builder page too

	* buildbot/status/web/builder.py (StatusResourceBuilder): same
	* buildbot/status/web/baseweb.py (OneLinePerBuild): display branch
	names, add some CSS classes
	* buildbot/status/web/classic.css (td.box): new class, for
	OneBoxPerBuild

	* docs/buildbot.texinfo (WebStatus): update docs

	* buildbot/slave/commands.py (SVN.parseGotRevision._parse): remove
	the trailing "M" indicator that tells us this is a modified file.
	This should help with mode="update" builds that modify files